k8s_prod/bcc-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcc-agent-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bcc-agent
  template:
    metadata:
      labels:
        component: bcc-agent
    spec:
      serviceAccountName: bcc-agent
      # initContainers:
      #   - name: check-redis
      #     image: redis
      #     command: [
      #       'sh',
      #       '-c',
      #       'until redis-cli -h redis -p 6379 ping; do echo waiting...; sleep 1; done;'
      #     ]
      containers:
        - name: agent
          image: bsfans/bcc-agent
          # ports:
          #   - containerPort: 5000
