k8s_prod/bcc-chain-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcc-chain-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bcc-chain-service
  template:
    metadata:
      labels:
        component: bcc-chain-service
    spec:
      serviceAccountName: bcc-agent
      containers:
        - name: bcc-chain-service
          image: bsfans/bcc-chain-service
          ports:
            - containerPort: 5001
