k8s_prod/bcc-chain-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-chain-service
spec:
  type: ClusterIP
  selector: 
    component: bcc-chain-service
  ports:
    - port: 5001
      targetPort: 5001
