k8s_prod/bcc-db-gate-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-db-gate
spec:
  type: ClusterIP
  selector: 
    component: bcc-db-gate
  ports:
    - port: 5000
      targetPort: 5000
