k8s_prod/bcc-web-ui-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-web-ui
spec:
  type: ClusterIP
  selector: 
    component: bcc-web-ui
  ports:
    - port: 3000
      targetPort: 3000
